--- a/skyQuest/Info.plist
+++ b/skyQuest/Info.plist
@@ -33,6 +33,19 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>ferrufino-cavazos.skyQuest</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>SQ</string>
+			</array>
+		</dict>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
